--- a/GF_glyphsets/Latin/languages/GF_Latin_Core.yaml
+++ b/GF_glyphsets/Latin/languages/GF_Latin_Core.yaml
@@ -7,17 +7,16 @@ language_codes:
   - en_Latn  # English
   - es_Latn  # Spanish
   - fi_Latn  # Finnish
-#  - fil_Latn  # Filipino
   - fr_Latn  # French
   - gn_Latn  # Guarani
   - gsw_Latn  # Swiss German
   - hr_Latn  # Croatian
-#  - ht_Latn  # Haitian Creole
   - hu_Latn  # Hungarian
-#   - id_Latn  # Indonesian
+  - is_Latn  # Icelandic
   - it_Latn  # Italian
+  - lv_Latn    # Latvian
+  - mt_Latn    # Maltese
   - nb_Latn  # Norwegian Bokmål
-#  - nds_Latn  # Low German
   - nl_Latn  # Dutch
   - pl_Latn  # Polish
   - pt_Latn  # Portuguese
@@ -28,6 +27,3 @@ language_codes:
   - sr_Latn  # Serbian (Latin)
   - sv_Latn  # Swedish
   - tr_Latn  # Turkish
-#  - vi_Latn  # Vietnamese
-  - is_Latn  # Icelandic
-  - lv_Latn    # Latvian
