--- a/GF_glyphsets/Latin/languages/GF_Latin_Core.yaml
+++ b/GF_glyphsets/Latin/languages/GF_Latin_Core.yaml
@@ -14,6 +14,7 @@ language_codes:
   - hu_Latn  # Hungarian
   - is_Latn  # Icelandic
   - it_Latn  # Italian
+  - lt_Latn    # Lithuanian
   - lv_Latn    # Latvian
   - mt_Latn    # Maltese
   - nb_Latn  # Norwegian Bokmål
