Added Northern Sami

--- a/GF_glyphsets/Latin/languages/GF_Latin_Core.yaml
+++ b/GF_glyphsets/Latin/languages/GF_Latin_Core.yaml
@@ -23,6 +23,7 @@ language_codes:
   - pt_Latn  # Portuguese
   - qu_Latn  # Quechua
   - ro_Latn  # Romanian
+  - se_Latn    # Northern Sami
   - sk_Latn  # Slovak
   - sq_Latn  # Albanian
   - sr_Latn  # Serbian (Latin)
