--- a/GF_glyphsets/Latin/languages/GF_Latin_Core.yaml
+++ b/GF_glyphsets/Latin/languages/GF_Latin_Core.yaml
@@ -10,6 +10,7 @@ language_codes:
   - fr_Latn  # French
   - gn_Latn  # Guarani
   - gsw_Latn  # Swiss German
+  - haw_Latn   # Hawaiian 
   - hr_Latn  # Croatian
   - hu_Latn  # Hungarian
   - is_Latn  # Icelandic
